# wav2aug

./: .gitignore  benchmark_augs.py  pyproject.toml  readme.md
.github/workflows/: black.yml  publish.yml  pytest.yml
tests/: test_gpu_augmentations.py
wav2aug/cpu/: _aug_utils.py  _babble_noise_addition.py  _chunk_swapping.py  _noise_addition.py  _speed_perturbation.py  wav2aug.py
wav2aug/data/: fetch.py
wav2aug/gpu/: __init__.py  amplitude_clipping.py  amplitude_scaling.py  chunk_swapping.py  frequency_dropout.py  noise_addition.py  polarity_inversion.py  single_augment.py  speed_perturbation.py  time_dropout.py  wav2aug.py
wav2aug/utils/: _aug_utils.py
